BusOne/src/objects/Sample_Order_Transaction_vod__c.object
<CustomObject>
    <description>Sample Order Transaction maintains and controls all transactional data related to Sample Orders, BRCs, and Sample Requests for PDMA and FDA compliance.</description>
    <fields>
        <fullName>ASSMCA_vod__c</fullName>
        <description>The ASSMCA field stores the ASSMCA # for all controlled substance requests to be sent to Puerto Rico.</description>
        <label>ASSMCA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id_vod__c</fullName>
        <description>The Account Id stores the SFDC Id that corresponds to the Account associated to the Sample Order.</description>
        <label>Account Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_vod__c</fullName>
        <description>The Account Name field stores the textual name of the Account that ordered the Sample.  This includes a concatenation of the Account&apos;s Salutation, First Name, Last Name, and Credentials.</description>
        <label>Account Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account field stores the reference to the Account that has requested the Sample shipment.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Order Transaction</relationshipLabel>
        <relationshipName>Sample_Order_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Address Line 1 is the first line of the Address for Transfer Sample Order Transactions. Address Line 1 for a Transfer To Sample Order Transaction is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Address Line 2 is the second line of the Address for Transfer Sample Order Transactions. Address Line 1 for a Transfer To Sample Transaction is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjust_For_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adjust For represents the User that the Adjustment Sample Order Transaction was performed for.</description>
        <label>Adjust For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Order_Transaction_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjusted_Date_vod__c</fullName>
        <description>Adjusted Date is the effective date of an Adjustment Sample Order Transaction.</description>
        <label>Adjusted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocation_Impact_Quantity_vod__c</fullName>
        <description>Allocation Impact Quantity is the formula that defines the impact that the Quantity and Confirmed Quantity have for a specific Transaction Type.  The Allocation Inventory Impact is summed for a given Sample Lot.</description>
        <formula>IF(AND(ISPICKVAL( Type_vod__c ,&quot;BRC_vod&quot;), ISPICKVAL(Status_vod__c ,&quot;Submitted_vod&quot;),  Lot_vod__c != null ),- Quantity_vod__c,
IF(AND(ISPICKVAL( Type_vod__c ,&quot;Transfer_vod&quot;), ISPICKVAL(Status_vod__c ,&quot;Submitted_vod&quot;) ),- Quantity_vod__c,
IF(AND(ISPICKVAL(Type_vod__c ,&quot;Receipt_vod&quot;),ISPICKVAL(Status_vod__c, &quot;Submitted_vod&quot;) ), Confirmed_Quantity_vod__c,
IF(AND(ISPICKVAL(Type_vod__c ,&quot;Adjustment_vod&quot;),ISPICKVAL(Status_vod__c ,&quot;Submitted_vod&quot; )), Quantity_vod__c ,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Impact Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>The Call Date field stores the Date of the Call when the Sample Send was requested.</description>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Datetime_vod__c</fullName>
        <description>The Call Datetime field stores the Date and Time of the Call when the Sample Send was requested.</description>
        <label>Call Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Id_vod__c</fullName>
        <description>Contains a text repersentation of the Id of the Call that created the Sample Order row.</description>
        <label>Call Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Name_vod__c</fullName>
        <description>Call Name field stores the Name of the Call (e.g., C00000023) that created the Sample Order.</description>
        <label>Call Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Sample_Id_vod__c</fullName>
        <description>Contains a text repersentation of the Id of the Call Sample  that created the Sample Order row.</description>
        <label>Call Sample Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Sample_Name_vod__c</fullName>
        <description>Contains the Name of the Call Sample that created the Sample Order row.</description>
        <label>Call Sample Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City is the City of the Address for Transfer Sample Order Transactions. For a Transfer To Sample Order Transaction, this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_vod__c</fullName>
        <description>The Comments field is available for 3rd party distribution systems to populate information related to the Shipment Order.</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Quantity_vod__c</fullName>
        <description>The Confirmed Quantity field is available for 3rd party distribution systems to populate information related to the Quantity of Samples that were delivered as part of the Shipment Order.</description>
        <label>Confirmed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>The credentials of the Account signing for a sample</description>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Text_vod__c</fullName>
        <description>Custom text captured for the corresponding product line item. Only pertains to product that have been flagged to allow capture of custom text via the Product Catalog.</description>
        <label>Custom Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration_Date_vod__c</fullName>
        <description>The DEA Expiration Date field contains the Expiration Date of the DEA License for the Physician receiving controlled substance samples.</description>
        <label>DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_vod__c</fullName>
        <description>The DEA # field contains the DEA License # for the Physician receiving controlled substance samples.</description>
        <label>DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Status_vod__c</fullName>
        <description>Status of the sample.</description>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In_Progress_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Shipped_vod</fullName>
                </value>
                <value>
                    <fullName>Delivered_vod</fullName>
                </value>
                <value>
                    <fullName>Cancel_Request_vod</fullName>
                </value>
                <value>
                    <fullName>Cancelled_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>The Disclaimer field stores the Disclaimer displayed to the Physician when signing for the Sampel Order.</description>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discrepancy_vod__c</fullName>
        <description>The Discrepancy field calculates the difference between the Quantity ordered and the Confirmed Quantity from the Distributor.</description>
        <formula>Quantity_vod__c - Confirmed_Quantity_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discrepancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_vod__c</fullName>
        <description>The Distributor stores the name of the Distribution company that will deliver the Samples to the requesting Physician.</description>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Identifier_vod__c</fullName>
        <description>If present, this is the group identifier for a grouped sample order transaction, otherwise it&apos;s just the sample order transaction id.</description>
        <formula>IF(LEN(Group_Transaction_Id_vod__c) &gt; 0,Group_Transaction_Id_vod__c, Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Transaction_Id_vod__c</fullName>
        <description>Group Transaction Id field acts as an identifier grouping multiple Sample Transactions together as a Group Transaction.</description>
        <externalId>true</externalId>
        <label>Group Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lot # represents the Lot # of the Sample for the Sample Order Transaction.</description>
        <label>Lot #</label>
        <referenceTo>Sample_Lot_vod__c</referenceTo>
        <relationshipLabel>Sample Order Transaction</relationshipLabel>
        <relationshipName>Sample_Order_Transaction_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer_vod__c</fullName>
        <description>The name of the manufacturer of the sampled product</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_vod__c</fullName>
        <description>The Quantity field stores the quantity of Samples requesting by the Physician.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_vod__c</fullName>
        <description>Reason represents the type of Adjustment Sample Order Transaction being performed.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Stolen</fullName>
                </value>
                <value>
                    <fullName>Destroyed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receipt_Comments_vod__c</fullName>
        <description>Receipt Comments are the comments that are collected for a Receipt Sample Order Transaction.</description>
        <label>Receipt Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Received_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Received checkbox identifies if a Transfer Sample Order Transaction has been received by the Recipient. The Received Checkbox is utilized by the Discrepancy Formula to determine if a Discrepancy should be identified for a Transfer Sample Order Transaction based on if it has been received.</description>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Order_Transaction_Id_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ref Transaction Id provides a relationship between related Sample Order Transactions, such as a Transfer and Receipt.</description>
        <label>Ref Order Transaction Id</label>
        <referenceTo>Sample_Order_Transaction_vod__c</referenceTo>
        <relationshipLabel>Sample Order Transaction</relationshipLabel>
        <relationshipName>Sample_Order_Transaction_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked when a physician requests a receipt.</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation_vod__c</fullName>
        <description>The salutation of the Account signing for a sample</description>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Card_Reason_vod__c</fullName>
        <description>The Sample Card Reason field contains the reason why a Sample Card was utilized instead of an electronic signature.</description>
        <label>Sample Card Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laptop Unavailable</fullName>
                </value>
                <value>
                    <fullName>Application Unavailable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Send_Card_vod__c</fullName>
        <description>Sample Send Card # represents the Sample Send Card Identifier for a Paper Disbursement Receipt. This field is populated from a Call by the Call_Header_trigger_vod trigger.</description>
        <label>Sample Send Card #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_U_M__c</fullName>
        <description>The Sample U/M field stores the Units of Measurement for the Sample being requested.</description>
        <label>Sample U/M</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_vod__c</fullName>
        <description>The Sample field stores the textual name of the Sample being requested.</description>
        <label>Sample</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_1_vod__c</fullName>
        <description>The Ship Address Line 1 field stores the Address Line 1 of the Ship to Address for the Sample Order.</description>
        <label>Ship Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_2_vod__c</fullName>
        <description>The Ship Address Line 2 field stores the Address Line 2 of the Ship to Address for the Sample Order.</description>
        <label>Ship Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number for the ship to address.</description>
        <label>Ship CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the ship to address.</description>
        <label>Ship CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City_vod__c</fullName>
        <description>The Ship City field stores the City of the Ship to Address for the Sample Order.</description>
        <label>Ship City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Country_vod__c</fullName>
        <description>The Ship Country field stores the Country of the Ship to Address for the Sample Order.</description>
        <label>Ship_Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_License_Expiration_Date_vod__c</fullName>
        <description>The Ship License Expiration Date field stores the Expiration Date of the requesting Physician&apos;s License.</description>
        <label>Ship License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_License_Status_vod__c</fullName>
        <description>The Ship License Status field stores the current status of the requesting Physicians&apos;s license.</description>
        <label>Ship License Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_License_vod__c</fullName>
        <description>The Ship License field stores the requesting Physician&apos;s License information.</description>
        <label>Ship License</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Location_vod__c</fullName>
        <description>The Ship Location field stores the Business Account location for a Sample Order.</description>
        <label>Ship Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State_Distributor_Exp_Date_vod__c</fullName>
        <description>The Expiration Date of the State Distributor license number for the corresponding Business Ship To Address.</description>
        <label>Ship State Distributor Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_State_Distributor_vod__c</fullName>
        <description>The State Distributor license number for the corresponding Business Ship To Address.</description>
        <label>Ship State Distributor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State_vod__c</fullName>
        <description>The Ship State field stores the State of the Ship to Address for the Sample Order.</description>
        <label>Ship State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_4_vod__c</fullName>
        <description>The Ship Zip 4 field stores the Zip 4 of the Ship to Address for the Sample Order.</description>
        <label>Ship Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_vod__c</fullName>
        <description>The Ship Zip field stores the Zip of the Ship to Address for the Sample Order.</description>
        <label>Ship Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Id_vod__c</fullName>
        <description>The Shipment Id field provides a 3rd party distributor with a location to load the Shipment Id related to the Samples Order.</description>
        <label>Shipment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>The Signature Date field stores the Date and Time that the Physician signed for the Sample Order.</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_Page_Display_Name_vod__c</fullName>
        <description>The value of the Account.Signature_Page_Display_Name_vod at the time of Signature Capture.</description>
        <label>Signature Page Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>The Signature field stores the binary version of the Physician&apos;s Signature.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State is the State of the Address for Transfer Sample Order Transactions. For a Transfer To Sample Transaction, this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The Status field stores the current Status of the Samples Order.  A Submitted Sample Order cannot be modified without unlocking the Sample Order.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
                <value>
                    <fullName>Submitted_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date_vod__c</fullName>
        <description>Submitted Date is the date when the Sample Transaction was set to a status of Submitted.</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>The Territory field stores the Territory of the Sales Rep that captured the Sample Order.</description>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Name_vod__c</fullName>
        <description>Transfer To represents the textual Username that is the recipient of the Transfer Sample Order Transaction.</description>
        <label>Transfer To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transfer To represents the User that is the recipient of the Transfer Sample Order Transaction. The selection of a User from the Transfer To, identifies the User from the Rep Roster based on the Username Id field and auto-populates the address fields for the Transfer Sample Order Transaction based on the Rep Roster address fields.</description>
        <label>Transfer To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Order_Transaction_To_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_Date_vod__c</fullName>
        <description>Transferred Date is the effective date that a Transfer Sample Order Transaction occurred.</description>
        <label>Transferred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transferred_From_Name_vod__c</fullName>
        <description>Transferred From Name is the textual representation of the User that a Transfer Sample Order Transaction is being performed for.</description>
        <label>Transferred From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_From_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transferred From represents the User that a Transfer Sample Order Transaction is being performed for.</description>
        <label>Transferred From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Order_Transaction_TFrom_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Type represents the Type of the Sample Order Transaction record. The Type picklist mirrors the Record Type of the Sample Order Transaction and is filtered and defaulted based on Record Type of the Sample Transaction.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment_vod</fullName>
                </value>
                <value>
                    <fullName>Receipt_vod</fullName>
                </value>
                <value>
                    <fullName>Transfer_vod</fullName>
                </value>
                <value>
                    <fullName>BRC_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>U_M_vod__c</fullName>
        <description>U/M represents the Unit of Measurement of the Sample Lot for the Sample Transaction.</description>
        <label>U/M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Boxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Unlock checkbox provides a mechanism to determine if a User can unlock a Sample Order Transaction.  If a User has Edit privileges to the Unlock field, then a Unlock button will be displayed.  Only Administrators and Samples Admins should have edit privileges to this field.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_4_vod__c</fullName>
        <description>This is the zip 4 of the Address for Transfer Sample Order Transactions. For a Transfer To Sample Order Transaction this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster.</description>
        <label>Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip is the zip code of the Address for Transfer Sample Order Transactions. For a Transfer To Sample Order Transaction, this field is auto-populated based on the Selected Transfer To user and their corresponding record in the Rep Roster</description>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Sample Order Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Name_vod__c</columns>
        <columns>Call_Name_vod__c</columns>
        <columns>Sample_vod__c</columns>
        <columns>Sample_U_M__c</columns>
        <columns>Ship_License_vod__c</columns>
        <columns>Signature_Date_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SOT-{000000000}</displayFormat>
        <label>Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Order Transaction</pluralLabel>
    <recordTypes>
        <fullName>Adjustment_vod</fullName>
        <active>true</active>
        <description>The Adjustment Record Type provides the ability to report destroyed, stolen, or expired Sample Order Transactions</description>
        <label>Adjustment_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>BRC</fullName>
        <active>true</active>
        <label>BRC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Receipt_vod</fullName>
        <active>true</active>
        <description>The Receipt Record Type provides the ability to receive Samples either from another user or from a fullfillment center.</description>
        <label>Receipt_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer_vod</fullName>
        <active>true</active>
        <description>The Transfer Record Type provides the ability to transfer Samples to another user.</description>
        <label>Transfer_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Return_Quantity_vod</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Type_vod__c, &quot;Return_vod&quot;) ,Quantity_vod__c &lt; 1)</errorConditionFormula>
        <errorDisplayField>Quantity_vod__c</errorDisplayField>
        <errorMessage>Error: Quantity &gt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_Quantity_vod</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Type_vod__c, &quot;Transfer_vod&quot;) ,Quantity_vod__c &lt; 1)</errorConditionFormula>
        <errorMessage>Error: Quantity &gt; 0</errorMessage>
    </validationRules>
</CustomObject>